<resources>

    <string name="app_name">CatchMe</string>
	<string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="High">High Score</string>
    <string name="exit">Exit</string>
    <string name="about">"About "</string>
    <string name="help">Help</string>
    <string name="hell">&quot;1. Collect the smilly faces with the box and make scores and as the level complete you shal see your score &quot;</string>
    <string name="hel">2. Be careful with he the Bomb if you collect that your box will balst and all your collected smillys will be gone</string>
    <string name="doyou">Do you want to continue ?</string>
    <string name="doyo">Do You Want To Continue ?</string>
    <string name="ok">Ok</string>
    <string name="ok1">OK</string>
    <string name="high">Highest Score</string>
    <string name="time">Highest Time</string>
    <string name="ok3">OK</string>
    <string name="ok5">OK</string>
</resources>
